<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">热门电影</string>
    <string name="menu_setting">设置</string>
    <string name="menu_refresh">刷新</string>
    <string name="title_activity_setting">设置中心</string>

    <string name="pref_sortType">排序方式</string>
    <string name="pref_sortType_default">0</string>
    <string name="pref_sortType_key">pref_sortType_key</string>
    <string-array name="pref_sortType_entries">
        <item>按热度排序</item>
        <item>按评分排序</item>
    </string-array>
    <string-array name="pref_sortType_values">
        <item>0</item>
        <item>1</item>
    </string-array>


    <string name="pref_pollFrequency">同步频率</string>
    <string name="pref_pollFrequency_default">24</string>
    <string name="pref_pollFrequency_key">pref_pollFrequency_key</string>
    <string-array name="pref_pollFrequency_entries">
        <item>每1小时</item>
        <item>每6小时</item>
        <item>每12小时</item>
        <item>每1天</item>
        <item>每3天</item>
        <item>每7天</item>
        <item>仅手动同步(不推荐)</item>
    </string-array>
    <string-array name="pref_pollFrequency_values">
        <item>1</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>72</item>
        <item>168</item>
        <item>1000</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="movie_details_title">电影详情</string>
    <string name="movie_image_description">movie_image</string>
    <string name="MSG_NETWORK_ERROR">网络错误</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_all">全部</string>

    <string name="format_runtime"><xliff:g id="runtime">%s</xliff:g>分钟</string>
    <string name="btn_text_favorite">收藏</string>
    <string name="btn_text_unfavorite">取消收藏</string>
</resources>
