<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:key="@string/pref_sortType_key"
        android:title="@string/pref_sortType"
        android:entries="@array/pref_sortType_entries"
        android:entryValues="@array/pref_sortType_values"
        android:defaultValue="@string/pref_sortType_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <ListPreference
        android:key="@string/pref_pollFrequency_key"
        android:title="@string/pref_pollFrequency"
        android:defaultValue="@string/pref_pollFrequency_default"
        android:negativeButtonText="取消"
        android:positiveButtonText="确定"
        android:entries="@array/pref_pollFrequency_entries"
        android:entryValues="@array/pref_pollFrequency_values" />

</PreferenceScreen>